fix: update integer and double instantiation to use valueOf