@@ -291,7 +291,7 @@ public class GUIControls extends JPanel implements ActionListener, ChangeListene
 		SpinnerNumberModel model =
 			(SpinnerNumberModel)this.zoomSelector.getModel();
 		double curZoom = model.getNumber().doubleValue();
-		Number newValue = new Double(curZoom + model.getStepSize().
+		Number newValue = Double.valueOf(curZoom + model.getStepSize().
 				doubleValue() * delta * curZoom * 100);
 
 		if (newValue.doubleValue() < ZOOM_MIN) {
